<resources>
    <string name="app_name">ChitChat App</string>
    <string name="display_user_id">User ID</string>
    <string name="pasword_hint">Password</string>
    <string name="display_name">Name</string>
    <string name="btn_login">Login</string>
    <string name="display_title">ChitChat</string>
    <string name="display_message">Last message</string>
    <string name="display_time">09:10</string>
    <string name="display_message_number">100</string>
    <string name="display_new_chat">New Chat</string>
    <string name="display_contact">Contacts</string>
    <string name="display_new_group">New Group</string>
    <string name="display_chat_group">Chat Group</string>
    <string name="display_choose_contact">Choose Contacts</string>
    <string name="display_type_message">Type your message</string>
    <string name="display_pop_cancel">Cancel</string>
    <string name="display_pop_gallery">Image From Gallery</string>
    <string name="display_pop_camera">Take Photo</string>
    <string name="display_chat_date">Date</string>
    <string name="display_subject_group">Group Subject</string>
    <string name="display_describe_group">Give your group a name</string>
    <string name="display_hint_type">Type a message</string>
    <string name="display_camera">Take Photo</string>
    <string name="display_gallery">Image From Gallery</string>
    <string name="display_button_cancel">Cancel</string>
    <string name="display_welcome">Welcome!</string>
    <string name="display_start">Lets start conversation</string>
    <string name="display_hint_caption">Add your caption</string>
    <string name="display_send">Send</string>
    <string name="display_choose_image">Choose image</string>
    <string name="display_grant">Grant Permission</string>
    <string name="display_denied">Denied Permission</string>
    <string name="display_read_img">Failed read image data</string>
    <string name="display_file_open">Failed open file</string>
    <string name="display_img_open">Failed open image</string>
    <string name="display_participant">Participants</string>

    <string name="qiscus_failed_download_file">Failed to download image!</string>
    <string name="qiscus_permission_message">If you not grant permission, the apps may not be working properly. So please grant the permission for better user experienced.</string>
    <string name="qiscus_corrupted_file">Can not read file, please make sure that is not corrupted file!</string>
    <string name="qiscus_message_too_far">Sorry, Message too far to load it!</string>
    <string name="failed_to_delete_messages">Failed to delete messages</string>
    <string name="qiscus_permission_request_title">Please grant permissions to make apps working properly!</string>
    <string name="qiscus_group_member_closing">and you</string>
    <string name="qiscus_group_member_only_you">Only you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>