<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_grey"
            android:gravity="center"
            android:padding="@dimen/dimen_8"
            android:text="@string/display_chat_date"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_5"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/font_12"
        android:text="@string/display_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:background="@drawable/bg_rounded_dark_grey"
                android:orientation="vertical"
                android:padding="@dimen/dimen_8">

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:text="@string/display_message"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_14" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/display_time"
            android:textColor="@color/black_semi"
            android:textSize="@dimen/font_10"/>

    </LinearLayout>
</LinearLayout>
