<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_grey"
            android:gravity="center"
            android:padding="@dimen/dimen_8"
            android:text="@string/display_chat_date"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_12">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="bottom|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/display_time"
                android:textColor="@color/black_semi"
                android:textSize="@dimen/font_10" />

            <ImageView
                android:id="@+id/state"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_marginStart="@dimen/dimen_4"
                android:layout_marginEnd="@dimen/dimen_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/bg_rounded_grey"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/display_message"
                android:textColor="@color/black_semi"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
