<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_empty_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center"
                android:text="@string/display_welcome"
                android:textColor="@color/grey_dark"
                android:textSize="@dimen/font_24"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/display_start"
                android:textColor="@color/grey_dark"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_room_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light" />

        <LinearLayout
            android:id="@+id/ll_Attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_6">

                <ImageView
                    android:id="@+id/iv_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_gallery_image" />

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/display_gallery"
                    android:textColor="@color/grey_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_6">

                <ImageView
                    android:id="@+id/iv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_cancel_circle" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/display_button_cancel"
                    android:textColor="@color/red" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_2">

            <ImageView
                android:id="@+id/btn_attach"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/dimen_5"
                android:src="@drawable/ic_attach_file" />

            <EditText
                android:id="@+id/edt_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/display_hint_type"
                android:imeOptions="actionSend"
                android:inputType="textLongMessage|textAutoCorrect|textCapSentences|textMultiLine"
                android:maxLines="4"
                android:nextFocusRight="@+id/button_send"
                android:padding="8dp"
                android:textColor="@color/grey_dark"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/font_14" />

            <ImageView
                android:id="@+id/button_send"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_send_on_white"
                app:tint="@color/grey_dark" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>